--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,6 +11,23 @@
     border: 0;
     }
 
+    /* container element to set the width of the page and center the page  */
+    .container{
+        width:1280px;
+        margin:0 auto;
+    }
+
+    header{
+        background-color: #000;
+        border-radius: 8px;
+
+    }
+    nav li a:hover {
+        color: #000;
+        background-color:#fff;
+    }
+    
+    
  /* Style rules for body and images */
 
 
