--- a/CSS/training.css
+++ b/CSS/training.css
@@ -43,3 +43,16 @@
     vertical-align: middle;
     margin-right: 10px;
 }
+
+.table-container {
+    overflow-x: auto; /* Allows horizontal scrolling */
+    margin: 0 auto; /* Center the container */
+}
+
+.training-schedule {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px auto;
+    font-size: 16px;
+}
+
